# dilithium

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASE.md  load.rs
.github/workflows/: kat.yml  release.yml  wasm.yml
benches/: README.md  api.rs
pkg/: README.md  package.json  pqc_dilithium.d.ts  pqc_dilithium.js  pqc_dilithium_bg.js  pqc_dilithium_bg.wasm  pqc_dilithium_bg.wasm.d.ts
src/: aes256ctr.rs  api.rs  error.rs  fips202.rs  lib.rs  ntt.rs  packing.rs  params.rs  poly.rs  polyvec.rs  randombytes.rs  reduce.rs  rng.rs  rounding.rs  sign.rs  symmetric.rs  symmetric_aes.rs  symmetric_shake.rs  wasm.rs
src/params/: mode_2.rs  mode_3.rs  mode_5.rs
tests/: integration.rs  kat.rs  test_matrix.sh  wasm.js
tests/KAT/: SeedBuffer_Dilithium
www/: index.html  index.js  package.json  readme.md
